frontend/src/styles/CreateGame.css
.create-game-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
}

.banner-image-container {
    width: 100%;
    max-width: 100%;
    overflow: hidden;
    margin-bottom: 1em;
}

.banner-image {
    width: 100%;
    height: auto;
    object-fit: cover;
    border-radius: 5px;
}

.banner-upload {
    margin-bottom: 1em;
    cursor: pointer;
    color: #e0e0e0;
    background-color: #333;
    border: none;
    padding: 0.5em 1em;
    border-radius: 5px;
    font-size: 0.9em;
}

.form-grid-three-cols {
    display: grid;
    grid-template-columns: repeat(3, 1fr); /* Equal columns */
    gap: 2%;
    width: 100%;
    box-sizing: border-box;
    overflow: hidden;
    max-height: 100%;
}

.col {
    display: flex;
    flex-direction: column;
    gap: 0.3rem;
    overflow: hidden;
    flex-grow: 1;
    box-sizing: border-box;
}

.small-label {
    font-size: 0.8em;
    margin-bottom: 0; /* Adjust as needed to reduce space */
}

input, select, button, textarea {
    background-color: #1e1e1e;
    color: #e0e0e0;
    border: none;
    border-radius: 5px;
    box-sizing: border-box;
    width: 100%;
    height: 35px;
}

textarea {
    height: 100%;
    width: 100%;
    resize: none;
    margin-bottom: 1em;
}

.unified-container {
    display: flex;
    align-items: center;
    gap: 0.5em;
    margin-top: -1rem;
    margin-bottom: -0.8rem;
    margin-right: 0.2rem;
    margin-left: 0.2rem;
    height: 30px;
}

.unified-container.days-buttons {
    display: flex;
    justify-content: space-between; /* Ensure even spacing */
    gap: 0.2em; /* Slight gap between buttons, can be adjusted */
}

.day-button {
    background-color: #333;
    color: #fff;
    border: none;
    cursor: pointer;
    font-size: 0.8em;
    border-radius: 5px;
    flex: 1; /* Make buttons take equal space */
    text-align: center; /* Center the text in the buttons */
    margin: 0; /* Remove default margins */
}

.day-button.active {
    background-color: #4caf50;
}

.cropper-container {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.8);
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    z-index: 9999;
}

.cropper-wrapper {
    width: 100%;
    height: calc(100% - 60px);
    display: flex;
    align-items: center;
    justify-content: center;
}

.cropper-buttons {
    margin-top: 20px;
    display: flex;
    gap: 10px;
    z-index: 10000; /* Ensure buttons are on top */
}

.cropper-buttons button {
    background-color: #4caf50;
    color: white;
    padding: 10px 20px;
    border: none;
    border-radius: 5px;
    cursor: pointer;
}

.cropper-buttons button:last-child {
    background-color: #f44336;
}

.cropper-buttons button:hover {
    opacity: 0.8;
}

.tags-wrapper {
    flex-grow: 1; /* Ensure it takes up the remaining vertical space */
    min-height: 0; /* Ensure flex items don't force min-height */
}

.location-button {
    background-color: #333;
    color: #fff;
    border: none;
    cursor: pointer;
    font-size: 0.8em;
    border-radius: 5px;
    flex: 1; /* Make buttons take equal space */
    text-align: center;
    margin: 0 0.2rem; /* Space between buttons */
    padding: 0.5em;
    transition: background-color 0.3s ease;
}

.location-button.active {
    background-color: #4caf50;
}

